@@ -118,14 +118,15 @@ public class JooqFTSHelper {
             .filter(e -> !ignoredFacets.contains(e.getKey()))
             .map(e -> compileFacetCondition(e.getKey(), e.getValue(), facetTypeFunctionMap))
             .filter(Objects::nonNull)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public Pair<List<Condition>, List<Condition>> resultFacetStateConditions(final FacetStateDto state) {
         final Predicate<Map.Entry<FacetType, List<SearchFilterDto>>> cteFilters =
             e -> e.getKey().equals(FacetType.DATA_SOURCES)
                 || e.getKey().equals(FacetType.ENTITY_CLASSES)
-                || e.getKey().equals(FacetType.TYPES);
+                || e.getKey().equals(FacetType.TYPES)
+                || e.getKey().equals(FacetType.STATUSES);
 
         final List<Condition> joinConditions = state.getState().entrySet().stream()
             .filter(not(cteFilters))
